Sat Feb  2 22:52:50 CET 2002 Wichert Akkerman <wakkerma@debian.org>

  * scripts/dpkg-gencontrol: Make dpkg-gencontrol not warn about Uploaders.

Sat Feb  2 18:14:24 CET 2002 Wichert Akkerman <wakkerma@debian.org>

  * man/Makefile.in: add pt_BR to SUBDIRS
  * man/pt_BR/Makefile.in, man/pt_BR/update-alternatives.8,
    man/pt_BR/.cvsignore: new files

Sat Feb  2 16:47:41 CET 2002 Wichert Akkerman <wakkerma@debian.org>

  * Makefile.in: add man to subdirs
  * man/*: new directory with all manpages

Sat Feb  2 16:23:43 CET 2002 Adam Heath <doogie@debian.org>

  * po/da.po: Updated

Sat Feb  2 00:18:04 CET 2002 Wichert Akkerman <wakkerma@debian.org>

  * automake/dpkg.m4: add DPKG_CHECK_DEFINE
  * configure.in: test for TIOCNOTTY in sys/ioctl.h
  * utils/start-stop-daemon.c: move tty change outside OS specific ifdef
    and use the new TIOCNOTTY test instead

Fri Feb  1 19:10:02 CET 2002 Wichert Akkerman <wakkerma@debian.org>

  * po/ca.po: New Catalan translation
  * configure.in: Add ca to LINGUAS

Fri Feb  1 17:37:24 CET 2002 Wichert Akkerman <wakkerma@debian.org>

  * configure.in: add test for setsid
  * utils/start-stop-daemon.c: use setsid if it exists and only use
    setpgid if it does not exist

Fri Feb  1 16:41:23 CET 2002 Wichert Akkerman <wakkerma@debian.org>

  * utils/start-stop-daemon.c: Merge patch from Andres Voegele
    <voegelas@users.sourceforge.net> to add HP-UX support
    
Fri Feb  1 13:58:59 CET 2002 Wichert Akkerman <wakkerma@debian.org>

  * po/fr.po: updated.

Thu Jan 31 21:34:14 CET 2002 Wichert Akkerman <wakkerma@debian.org>

  * scripts/install-info.pl: add -c option to gzip invocation

Thu Jan 31 14:56:38 CET 2002 Wichert Akkerman <wakkerma@debian.org>

  * doc/fr/install-info.8, doc/fr/update-alternatives.8: updated with
    new version from Philippe Batailler

Wed Jan 30 10:31:38 CET 2002 Wichert Akkerman <wakkerma@debian.org>

  * scripts/update-alternative.pl: exit with non-zero exitcode when