@@ -1,3 +1,8 @@
+Sat Feb  2 22:59:06 CET 2002 Wichert Akkerman <wakkerma@debian.org>
+
+  * scripts/install-info.pl: Continue to read all data from a pipe, until
+    EOF.  
+
 Sat Feb  2 22:52:50 CET 2002 Wichert Akkerman <wakkerma@debian.org>
 
   * scripts/dpkg-gencontrol: Make dpkg-gencontrol not warn about Uploaders.
